
- Moved data out of stdlib_data.c and into the code that references
  or initializes it.

- The stdlib constructor now performs the CPU/FPU compatibility test.

- Introduced new constructor types and changed the overall priority
  order.

- Switched over the startup code and the library itself to use
  constructor/destructor functions for initialization and cleanup
  purposes.


c.lib 1.189 (5.3.2005)

- Rewrote the __translate_unix_to_amiga_path_name() function to
  translate patterns such as "foo/bar/../../baz" properly, and to
  use strlen() a lot less.

- Major, major changes! Moved most of the monolithic code out of
  the file descriptor hook and into the respective functions,
  such as dup2(), fchmod(), fchown(), fcntl(), fdatasync(), fstatfs(),
  fsync(), ftruncate() and lseek(). Code which is not strictly
  required will no longer find its way into your programs if you
  link with the updated library.

  NOTE: these changes require that the entire library is rebuilt!

- The buffered and unbuffered file hook code is now invoked through
  function pointers alone. The utility.library/CallHookPkt mechanism
  is no longer required.

- Moved the entire lseek() code relevant for files into the hook
  function.

- Simplified the close() function which now just calls into the
  hook code to perform whatever is necessary. The hook code is
  responsible for cleaning up after aliases, etc. This change in
  turn made it possible to greatly simplify the hook code for
  buffered files which now bypasses close/read/write/lseek and
  directly invokes the hook code for unbuffered files.

- Added various floating point constants to <math.h>, courtesy
  of Henning Nielsen Lund. Thank you very much!

- When using the wildcard expansion code for command line
  parameters (which is by default linked in with libunix.a),
  regular expressions can no longer prompt dos.library requesters
  to appear. However, to be on the safe side, if you are expecting